# gorldle

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bleh  profile_1.json
back/: Cargo.toml  Dockerfile  profile_1.json
back/src/: dota.rs  main.rs  profile.rs
front/: Cargo.toml  Trunk.toml  index.html  style.css
front/src/: app.rs  main.rs
src/: dota.rs  main.rs
src/web/: mod.rs  web.rs
