[package]
name = "gorldle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["tracing", "macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
