[package]
name = "gorldle-back"
version = "0.1.0"
edition = "2021"

[dependencies]
assert-json-diff = "2.0.2"
axum = { version = "0.8.1", features = ["macros"] }
rand = { version = "0.9.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["tracing", "macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
