[package]
name = "front"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["hydrate", "nightly", "ssr"] }
leptos_meta = { version = "0.8.2", features = ["ssr"] }
leptos_axum = { version = "0.8.0", optional = true, features = ["wasm"] }
leptos_router = { version = "0.8.2", features = ["ssr"] }
axum = { version = "0.8.1", features = ["macros"], optional = true }
tokio = { version = "1.43.0", features = ["tracing", "macros", "rt-multi-thread", "signal", "process"], optional = true }
log = { version = "0.4.27", features = ["serde", "std"] }
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"

[features]
hydrate = [
    "leptos/hydrate",
]

ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

