[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
gloo-net = { version = "0.6.0", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2.0"
